fixed issue where the small profile icon would break the nav bar

--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -83,9 +83,10 @@ background-color: #76b900;
 .profile-img {
   max-width: 100%;
   max-height: 100%;
-  margin-right: 860px;
+  margin-right: 800px;
+  border-radius: 100%;
 }
-/* .history-card {
-
- 
-} */
+.cartTitle {
+text-align: center;
+margin-right: 650px;
+}
