--- a/client/src/index.css
+++ b/client/src/index.css
@@ -42,7 +42,7 @@
     padding-right: 5px;
     max-height: 613px;
     min-height: 613px;
-    background-color: #666;
+    background-color: #343a40;
     padding-bottom: 50px;
     
   }
